# OpenGL-Simple-Fluid-Simulation

./: Cargo.toml  LICENSE  README.md
res/shaders/: bounds.fs  bounds.vs  calc_density.compute  cube.fs  cube.vs  fluid.compute  fluid.fs  fluid.vs  fragment_simple.fs  marching_cubes.compute  vertex_simple.vs
src/: camera.rs  fluid.rs  main.rs  marching_cubes.rs  math.rs  obj_loader.rs
