[package]
name = "opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.33.0"
winit = "0.28.7"
image = "0.24.7"
egui_glium = "0.23.0"
egui = "0.23.0"
nalgebra-glm = "0.3"
rand = "0.8.5"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
